compiler/testData/diagnostics/tests/companionObjectInEnumAccess.diag.txt
/companionObjectInEnumAccess.kt:10:17: error: variable 'staticValue' must be initialized
        println(staticValue)
                ^^^^^^^^^^^

